@@ -9,6 +9,7 @@ Added
 * ``covariance()``
 * ``add_to_mean()``
 * ``sinh()``
+* ``cosh()``
 
 0.3.0 (2016-12-03)
 -----------
